# tensor-network-compiler

./: .gitignore  CMakeLists.txt  CompTN.cpp  README.md
frontend/: benchmarking.py  generate.py  generate1.py  generate2.py  generateExample.py  generateNP.py  unittests.py
include/TensorNetwork/: CMakeLists.txt  MLIRGen.h  Passes.h  TensorNetworkDialect.h  TensorNetworkDialect.td  TensorNetworkOps.h  TensorNetworkOps.td  TensorNetworkPasses.h  TensorNetworkPasses.td  TensorNetworkTypes.h  TensorNetworkTypes.td
lib/: CMakeLists.txt
lib/TensorNetwork/: CMakeLists.txt  TensorNetworkDialect.cpp  TensorNetworkDialectBindings.cpp  TensorNetworkOps.cpp  TensorNetworkPasses.cpp  TensorNetworkTypes.cpp
lib/mlir/: LowerToLLVM.cpp  LowerToLinalg.cpp  NaiveLowering.cpp
test/: CMakeLists.txt  test.cpp
test/generate_mlir_ir/: CMakeLists.txt  generate.cpp
test/mlir/: first_test.mlir  lowering_command.sh  mod_main_func.mlir  rank2index1.mlir  rank3index2.mlir  ten_tensors.mlir  tensor_network_test.mlir
